@@ -24,6 +24,7 @@ import static java.util.stream.Stream.concat;
 import com.redhat.rhn.common.conf.ConfigDefaults;
 import com.redhat.rhn.common.db.datasource.DataResult;
 import com.redhat.rhn.common.db.datasource.ModeFactory;
+import com.redhat.rhn.common.db.datasource.Row;
 import com.redhat.rhn.common.db.datasource.SelectMode;
 import com.redhat.rhn.common.db.datasource.WriteMode;
 import com.redhat.rhn.common.hibernate.HibernateFactory;
@@ -79,8 +80,10 @@ import com.redhat.rhn.domain.server.MinionServerFactory;
 import com.redhat.rhn.domain.server.Server;
 import com.redhat.rhn.domain.server.ServerFactory;
 import com.redhat.rhn.domain.user.User;
+import com.redhat.rhn.frontend.dto.ActionedSystem;
 import com.redhat.rhn.frontend.dto.PackageMetadata;
 import com.redhat.rhn.frontend.dto.ScheduledAction;
+import com.redhat.rhn.frontend.dto.SystemPendingEventDto;
 import com.redhat.rhn.frontend.listview.PageControl;
 import com.redhat.rhn.frontend.xmlrpc.InvalidActionTypeException;
 import com.redhat.rhn.manager.BaseManager;
@@ -291,7 +294,7 @@ public class ActionManager extends BaseManager {
     public static void deleteActionsByIdAndType(Long id, Integer type) {
         WriteMode m = ModeFactory.getWriteMode("Action_queries",
                 "delete_actions_by_id_and_type");
-        Map params = new HashMap();
+        Map<String, Object> params = new HashMap<>();
         params.put("id", id);
         params.put("action_type", type);
         m.executeUpdate(params);
@@ -803,7 +806,7 @@ public class ActionManager extends BaseManager {
      * scheduled action
      * @return A list containing the pending actions for the user
      */
-    public static DataResult recentlyScheduledActions(User user, PageControl pc,
+    public static DataResult<ScheduledAction> recentlyScheduledActions(User user, PageControl pc,
             long age) {
         SelectMode m = ModeFactory.getMode("Action_queries",
                 "recently_scheduled_action_list");
@@ -816,7 +819,7 @@ public class ActionManager extends BaseManager {
             return makeDataResult(params, params, pc, m);
         }
 
-        DataResult dr = m.execute(params);
+        DataResult<ScheduledAction> dr = m.execute(params);
         dr.setTotalSize(dr.size());
         return dr;
     }
@@ -828,7 +831,7 @@ public class ActionManager extends BaseManager {
      * @param pc The details of which results to return
      * @return A list containing the all actions for the user
      */
-    public static DataResult allActions(User user, PageControl pc) {
+    public static DataResult<ScheduledAction> allActions(User user, PageControl pc) {
         return getActions(user, pc, "all_action_list");
     }
 
@@ -851,7 +854,7 @@ public class ActionManager extends BaseManager {
      * @param setLabel Label of an RhnSet of actions IDs to limit the results to.
      * @return A list containing the pending actions for the user.
      */
-    public static DataResult pendingActionsInSet(User user, PageControl pc,
+    public static DataResult<ScheduledAction> pendingActionsInSet(User user, PageControl pc,
             String setLabel) {
 
         return getActions(user, pc, "pending_actions_in_set", setLabel);
@@ -866,7 +869,7 @@ public class ActionManager extends BaseManager {
      * @param sid Server id
      * @return A list containing the pending actions for the user.
      */
-    public static DataResult pendingActionsToDeleteInSet(User user, PageControl pc,
+    public static DataResult<SystemPendingEventDto> pendingActionsToDeleteInSet(User user, PageControl pc,
             String setLabel, Long sid) {
         SelectMode m = ModeFactory.getMode("System_queries",
                 "pending_actions_to_delete_in_set");
@@ -877,7 +880,7 @@ public class ActionManager extends BaseManager {
         if (pc != null) {
             return makeDataResult(params, params, pc, m);
         }
-        DataResult dr = m.execute(params);
+        DataResult<SystemPendingEventDto> dr = m.execute(params);
         dr.setTotalSize(dr.size());
         dr.setElaborationParams(params);
         return dr;
@@ -909,7 +912,7 @@ public class ActionManager extends BaseManager {
      * @param pc The details of which results to return
      * @return A list containing the pending actions for the user
      */
-    public static DataResult allCompletedActions(User user, PageControl pc) {
+    public static DataResult<ScheduledAction> allCompletedActions(User user, PageControl pc) {
         return getActions(user, pc, "completed_action_list", null, true);
     }
 
@@ -919,7 +922,7 @@ public class ActionManager extends BaseManager {
      * @param pc The details of which results to return
      * @return A list containing the pending actions for the user
      */
-    public static DataResult archivedActions(User user, PageControl pc) {
+    public static DataResult<ScheduledAction> archivedActions(User user, PageControl pc) {
         return getActions(user, pc, "archived_action_list");
     }
 
@@ -929,7 +932,7 @@ public class ActionManager extends BaseManager {
      * @param pc The details of which results to return
      * @return A list containing the pending actions for the user
      */
-    public static DataResult allArchivedActions(User user, PageControl pc) {
+    public static DataResult<ScheduledAction> allArchivedActions(User user, PageControl pc) {
         return getActions(user, pc, "archived_action_list", null, true);
     }
 
@@ -942,7 +945,7 @@ public class ActionManager extends BaseManager {
      * @param noLimit Return all actions without limiting the results
      * @return Returns a list containing the actions for the user
      */
-    private static DataResult getActions(User user, PageControl pc, String mode,
+    private static DataResult<ScheduledAction> getActions(User user, PageControl pc, String mode,
             String setLabel, boolean noLimit) {
         SelectMode m = ModeFactory.getMode("Action_queries", mode);
         Map<String, Object> params = new HashMap<>();
@@ -961,7 +964,7 @@ public class ActionManager extends BaseManager {
                 m.setMaxRows(limit);
             }
         }
-        DataResult dr = m.execute(params);
+        DataResult<ScheduledAction> dr = m.execute(params);
         dr.setTotalSize(dr.size());
         dr.setElaborationParams(params);
         return dr;
@@ -975,7 +978,7 @@ public class ActionManager extends BaseManager {
      * @param mode The mode
      * @return Returns a list containing the actions for the user
      */
-    private static DataResult getActions(User user, PageControl pc, String mode,
+    private static DataResult<ScheduledAction> getActions(User user, PageControl pc, String mode,
             String setLabel) {
         return getActions(user, pc, mode, setLabel, false);
     }
@@ -988,7 +991,7 @@ public class ActionManager extends BaseManager {
      * @param mode The mode
      * @return Returns a list containing the actions for the user
      */
-    private static DataResult getActions(User user, PageControl pc, String mode) {
+    private static DataResult<ScheduledAction> getActions(User user, PageControl pc, String mode) {
         return getActions(user, pc, mode, null);
     }
 
@@ -998,7 +1001,7 @@ public class ActionManager extends BaseManager {
      * @param pc The details of which results to return
      * @return Return a list containing the packages for the action.
      */
-    public static DataResult getPackageList(Long aid, PageControl pc) {
+    public static DataResult<Row> getPackageList(Long aid, PageControl pc) {
         SelectMode m = ModeFactory.getMode("Package_queries",
                 "packages_associated_with_action");
         Map<String, Object> params = new HashMap<>();
@@ -1006,7 +1009,7 @@ public class ActionManager extends BaseManager {
         if (pc != null) {
             return makeDataResult(params, params, pc, m);
         }
-        DataResult dr = m.execute(params);
+        DataResult<Row> dr = m.execute(params);
         dr.setTotalSize(dr.size());
         return dr;
     }
@@ -1084,10 +1087,10 @@ public class ActionManager extends BaseManager {
      * @param mode The DataSource mode to run
      * @return Returns list containing the completed systems.
      */
-    private static DataResult getActionSystems(User user,
-            Action action,
-            PageControl pc,
-            String mode) {
+    private static DataResult<ActionedSystem> getActionSystems(User user,
+                                                               Action action,
+                                                               PageControl pc,
+                                                               String mode) {
 
         SelectMode m = ModeFactory.getMode("System_queries", mode);
         Map<String, Object> params = new HashMap<>();
@@ -1097,7 +1100,7 @@ public class ActionManager extends BaseManager {
         if (pc != null) {
             return makeDataResult(params, params, pc, m);
         }
-        DataResult dr = m.execute(params);
+        DataResult<ActionedSystem> dr = m.execute(params);
         dr.setTotalSize(dr.size());
         return dr;
     }
@@ -1109,8 +1112,7 @@ public class ActionManager extends BaseManager {
      * @param pc The PageControl.
      * @return Returns list containing the completed systems.
      */
-    public static DataResult completedSystems(User user,
-            Action action,
+    public static DataResult<ActionedSystem> completedSystems(User user, Action action,
             PageControl pc) {
 
         return getActionSystems(user, action, pc, "systems_completed_action");
@@ -1124,9 +1126,7 @@ public class ActionManager extends BaseManager {
      * @param pc The PageControl.
      * @return Returns list containing the completed systems.
      */
-    public static DataResult inProgressSystems(User user,
-            Action action,
-            PageControl pc) {
+    public static DataResult<ActionedSystem> inProgressSystems(User user, Action action, PageControl pc) {
 
         return getActionSystems(user, action, pc, "systems_in_progress_action");
     }
@@ -1139,10 +1139,7 @@ public class ActionManager extends BaseManager {
      * @param pc The PageControl.
      * @return Returns list containing the completed systems.
      */
-    public static DataResult failedSystems(User user,
-            Action action,
-            PageControl pc) {
-
+    public static DataResult<ActionedSystem> failedSystems(User user, Action action, PageControl pc) {
         return getActionSystems(user, action, pc, "systems_failed_action");
     }
 
@@ -1406,7 +1403,7 @@ public class ActionManager extends BaseManager {
      * (typically: Taskomatic is down)
      */
     public static PackageAction schedulePackageInstall(User scheduler,
-            Server srvr, List pkgs, Date earliestAction) throws TaskomaticApiException {
+            Server srvr, List<Map<String, Long>> pkgs, Date earliestAction) throws TaskomaticApiException {
         return (PackageAction) schedulePackageAction(scheduler, pkgs,
                 ActionFactory.TYPE_PACKAGES_UPDATE, earliestAction, srvr);
     }
@@ -1845,8 +1842,8 @@ public class ActionManager extends BaseManager {
      */
     public static Action schedulePackageInstall(User scheduler, Server srvr,
             Long nameId, Long evrId, Long archId) throws TaskomaticApiException {
-        List packages = new LinkedList();
-        Map row = new HashMap();
+        List<Map<String, Long>> packages = new LinkedList<>();
+        Map<String, Long> row = new HashMap<>();
         row.put("name_id", nameId);
         row.put("evr_id", evrId);
         row.put("arch_id", archId);
@@ -1870,9 +1867,9 @@ public class ActionManager extends BaseManager {
         if (pkgs.isEmpty()) {
             return null;
         }
-        List packages = new LinkedList();
+        List<Map<String, Long>> packages = new LinkedList<>();
         for (Package pkg : pkgs) {
-            Map row = new HashMap();
+            Map<String, Long> row = new HashMap<>();
             row.put("name_id", pkg.getPackageName().getId());
             row.put("evr_id", pkg.getPackageEvr().getId());
             row.put("arch_id", pkg.getPackageArch().getId());
@@ -1900,7 +1897,7 @@ public class ActionManager extends BaseManager {
      * (typically: Taskomatic is down)
      */
     public static Action schedulePackageAction(User scheduler,
-            List pkgs,
+            List<Map<String, Long>> pkgs,
             ActionType type,
             Date earliestAction,
             Server...servers) throws TaskomaticApiException {
@@ -1926,7 +1923,7 @@ public class ActionManager extends BaseManager {
      * @throws TaskomaticApiException if there was a Taskomatic error
      * (typically: Taskomatic is down)
      */
-    public static Action schedulePackageAction(User scheduler, List pkgs, ActionType type,
+    public static Action schedulePackageAction(User scheduler, List<Map<String, Long>> pkgs, ActionType type,
             Date earliestAction, Set<Long> serverIds)
         throws TaskomaticApiException {
 
@@ -1935,7 +1932,7 @@ public class ActionManager extends BaseManager {
         Action action = scheduleAction(scheduler, type, name, earliestAction, serverIds);
         ActionFactory.save(action);
 
-        addPackageActionDetails(Arrays.asList(action), pkgs);
+        addPackageActionDetails(List.of(action), pkgs);
         taskomaticApi.scheduleActionExecution(action);
         if (ActionFactory.TYPE_PACKAGES_UPDATE.equals(type)) {
             MinionActionManager.scheduleStagingJobsForMinions(singletonList(action), scheduler.getOrg());
@@ -2029,9 +2026,9 @@ public class ActionManager extends BaseManager {
             ActionType type, Date earliestAction)
         throws TaskomaticApiException {
 
-        List packages = new LinkedList();
+        List<Map<String, Long>> packages = new LinkedList<>();
         for (RhnSetElement rse : pkgs.getElements()) {
-            Map row = new HashMap();
+            Map<String, Long> row = new HashMap<>();
             row.put("name_id", rse.getElement());
             row.put("evr_id", rse.getElementTwo());
             row.put("arch_id", rse.getElementThree());
